# webassembly-experiments

./: .gitignore  Cargo.toml
basic_wasm/hello-as/: package.json
basic_wasm/hello-as/assembly/: index.ts
basic_wasm/hello-wasm/: Cargo.toml
basic_wasm/src/: main_wasmer.rs
hello-as/: package-lock.json
hello-as/assembly/: env.ts
hello-wasm/src/: lib.rs
src/: main.rs
wasm_string_import_export/: Cargo.toml
wasm_string_import_export/guest/: Cargo.toml
wasm_string_import_export/guest/src/: lib.rs
wasm_string_import_export/host/: Cargo.toml
wasm_string_import_export/host/src/: main.rs
wit-supabase/guest/: Cargo.toml
wit-supabase/guest/src/: host.rs  lib.rs
wit-supabase/host/: Cargo.toml
wit-supabase/host/src/: guest.rs  host.rs  main.rs
wit-supabase/wits/: guest.wit  host.wit
wit_bindgen/guest/: Cargo.toml
wit_bindgen/guest/src/: lib.rs
wit_bindgen/guest2/: Cargo.toml
wit_bindgen/guest2/src/: lib.rs
wit_bindgen/host/: Cargo.toml
wit_bindgen/host/src/: bindings.rs  main.rs  main_old.rs
wit_bindgen/wits/: say.wit
