[package]
name = "hello-wasmer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "2.3.0"
wasmer-wasi = "2.3.0"
wasmtime = "0.40.1"
wasmtime-wasi = "0.40.1"
# wasi-experimental-http = "0.10.0"
# wasi-experimental-http-wasmtime = "0.10.0"